css/style.css
/* Global Styles */
* {
  box-sizing: border-box;
}

/* Basic tags */

html {
  font-size: 16px;
  letter-spacing: 0.5px;
  line-height: 1.5;
  hyphens:auto
}

body {
  font-family: 'Open Sans', sans-serif;
  color: #4A4A4A;
  background-color: #FAFAFA;
}

h1 {
  margin: 0 0 1rem 0;
}

img {
  width: 100%;
  height: auto;
}

header {
  background-color: #FAFAFA;
}

li {
  /* border: 1px solid red; */
  background-color: white;
  margin-bottom: 0.5rem;
  
}

header li a {
  /* border: 1px solid red; */
  display: block;
  padding: 0.5rem 0;
  color: #4A4A4A;
  font-weight: bold;
  text-transform: uppercase;
}

section {
  text-align: center;
}

footer {
  background-color: #FAFAFA;
}


strong {
  padding-left: .5rem;
}

/* Main styles */
.container {
  width: 90%;
  margin: 0 auto;
}

.contact-wrapper {
  width: 90%;
  margin: 0 auto;
}
.profile-image{
  width: 80%;
  height: auto;
}

.center {
  text-align: center;
}

.bottem-section-header {
  /* border: 1px solid red; */
  text-align: center;
  margin-top: 3rem;
}

.bottem-section-header p{
  padding-bottom: 1rem;
}

.section-title {
  text-transform: uppercase;
  font-size: 1rem;
  font-weight: bolder;
  padding: 2rem 0;
}

.card {
  margin-top: 2rem;
  /* background-color: white; */
  /* min-height: 500px; */
  
}
.card h2 {
  font-size: 1rem;
  margin-bottom: 1.4rem; 
}

hr {
  border-top: 0px solid #4A4A4A;
}

footer {
  padding: 20px;
}

footer h2{
  /* border: 2px solid green; */
  float: left;
  font-size: 1rem;
  padding: 0;
  margin: 0;
}

footer ul {
  text-align: right;
}


footer li {
  /* border: rgb(115, 22, 192) 2px solid; */
  background-color: #FAFAFA;
  display: inline-block;
  padding: 0;
}

nav li{
  text-transform: uppercase;
  /* border: 1px solid red; */
}

.full {
  display: none;
}

/* Media Query's */

@media (min-width: 768px) {
  header {
    /* border: 1px solid greenyellow; */
    padding-top: 5rem;
  }

  .top-section-header li {
    display: inline-block;
    margin-right: 2rem;
    background-color: #FAFAFA;
  }

  .top-header-text {
    text-align: left;
    font-size: 1.1rem;
    margin-right: 1rem;

  }

  .profile-image {
    float: right;
    width: 45%;
    height: auto;
    margin-bottom: 3rem;
    margin-left: 1rem;
  }

  .group::after {
    /* border: 2px solid greenyellow; */
    content: "";
    display: block;
    clear: both;
  }

  .card {
    float: left;
    max-width:50%;
    padding: 10px;
  }

  .contact-section {
    background-color: #FAFAFA;
    /* border: 1px solid greenyellow; */
  }

  .contact-wrapper {
    width: 100%;
    padding: 3rem 5rem;
  }

  footer {
    padding: 1rem 1rem 5rem 1rem;
  }

  footer li{
    margin-right: 1.8rem;
  }
  
  .full {
    display: inline-block;
  }

  .top {
    display: none;
  }
}

@media (min-width: 1024px) {
  .container {
    max-width: 1000px;
  }
  .card {
    max-width:33%;
  }

  .name-heading {
    float: left;
  }

  header ul {
    text-align: right;
  }

}

